# jellycute

./: CLAUDE.md  CMakeLists.txt  HISTORY.md  README.md  resources.qrc
qml/: CarbonTitleBar.qml  DetailPage.qml  GridPage.qml  HomePage.qml  LoginPage.qml  Main.qml  MediaRow.qml  PlayerPage.qml  SettingsPage.qml
src/: AccountStore.cpp  AccountStore.h  BrowseModel.cpp  BrowseModel.h  BrowserWidget.cpp  BrowserWidget.h  DetailPage.cpp  DetailPage.h  ItemDetailModel.cpp  ItemDetailModel.h  ItemListModel.cpp  ItemListModel.h  JellyfinClient.cpp  JellyfinClient.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  MediaRow.cpp  MediaRow.h  MpvObject.cpp  MpvObject.h  MpvWidget.cpp  MpvWidget.h  PlayEmblemDelegate.h  PlaybackSession.cpp  PlaybackSession.h  Preferences.cpp  Preferences.h  ServerProbe.cpp  ServerProbe.h  SettingsDialog.cpp  SettingsDialog.h  Theme.cpp  Theme.h  main.cpp
